WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245976
stagent.dev: Clicking email field on sign up form does not allow input until you click a second time
https://bugs.webkit.org/show_bug.cgi?id=245976
Summary
stagent.dev: Clicking email field on sign up form does not allow input until ...
Aditya Keerthi
Reported
2022-10-03 12:16:50 PDT
rdar://98341809
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-10-03 15:57:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4950
EWS
Comment 2
2022-10-06 11:18:57 PDT
Committed
255229@main
(f3b946f8835c): <
https://commits.webkit.org/255229@main
> Reviewed commits have been landed. Closing PR #4950 and removing active labels.
Aditya Keerthi
Comment 3
2022-11-07 17:04:19 PST
Reverted in
https://commits.webkit.org/256431@main
.
Aditya Keerthi
Comment 4
2022-11-09 12:40:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6315
EWS
Comment 5
2022-11-11 11:25:27 PST
Committed
256581@main
(d66021f08879): <
https://commits.webkit.org/256581@main
> Reviewed commits have been landed. Closing PR #6315 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug